--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <link rel="stylesheet" href="style/style.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -20,13 +23,80 @@
             </div>
         </header>
         <nav class="menu__nav nav">
-            <ul>
-                <li>Dashboard</li>
-                <li>Product</li>
-                <li>Customers</li>
-                <li>Income</li>
-                <li>Promote</li>
-                <li>Help</li>
+            <ul class="nav__list">
+                <li class="nav__list-item">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-key-square"></use>
+                        </svg>
+                    </button>
+                    <p>Dashboard</p>
+                </li>
+                <li class="nav__list-item">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-d-square"></use>
+                        </svg>
+                    </button>
+                    <p>Product</p>
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="16" height="16">
+                            <use href="public/images/icon.svg#icon-chevron"></use>
+                        </svg>
+                    </button>
+                </li>
+                <li class="nav__list-item">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-user-square"></use>
+                        </svg>
+                    </button>
+                    <p>Customers</p>
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="16" height="16">
+                            <use href="public/images/icon.svg#icon-chevron"></use>
+                        </svg>
+                    </button>
+                </li>
+                <li class="nav__list-item">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-wallet-money"></use>
+                        </svg>
+                    </button>
+                    <p>Income</p>
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="16" height="16">
+                            <use href="public/images/icon.svg#icon-chevron"></use>
+                        </svg>
+                    </button>
+                </li>
+                <li class="nav__list-item">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-discount-shape"></use>
+                        </svg>
+                    </button>
+                    <p>Promote</p>
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="16" height="16">
+                            <use href="public/images/icon.svg#icon-chevron"></use>
+                        </svg>
+                    </button>
+                </li>
+                <li class="nav__list-item">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-message-question"></use>
+                        </svg>
+                    </button>
+                    <p>Help</p>
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="16" height="16">
+                            <use href="public/images/icon.svg#icon-chevron"></use>
+                        </svg>
+                    </button>
+                </li>
             </ul>
         </nav>
     </section>
