finish menu styled

--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,13 @@
                 </li>
             </ul>
         </nav>
+        <section class="section-user">
+            <img src="./public/images/user-photo.png" alt="user photo">
+            <div>
+                <h4 class="section-user__title">Evano</h4>
+                <p class="section-user__position">Project Manager</p>
+            </div>
+        </section>
     </section>
     <main class="main"></main>
 </div>
