add style from table

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Poppins:wght@400;500;600&display=swap"
           rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -120,7 +121,104 @@
             </div>
         </section>
     </section>
-    <main class="main"></main>
+    <main class="main">
+        <h2 class="main__title">Hello Evano 👋🏼,</h2>
+        <section class="main__container-table container-table">
+            <div class="container-table__top">
+                <div class="container-table__text">
+                    <h3 class="container-table__title">All Customers</h3>
+                    <p class="container-table__paragraph">Active Members</p>
+                </div>
+                <div class="container-table__input">
+                    <span class="container-table__icon"><i class="fa fa-search"></i></span>
+                    <input type="search" placeholder="Search" class="container-table__search">
+                </div>
+            </div>
+            <div class="container-table__table table">
+                <div class="table__container-head">
+                    <table class="table__content">
+                        <thead class="table__head">
+                        <tr>
+                            <th class="table__head-cell table__head-cell--first">Customer Name</th>
+                            <th class="table__head-cell table__head-cell--second">Company</th>
+                            <th class="table__head-cell table__head-cell--third">Phone Number</th>
+                            <th class="table__head-cell table__head-cell--fourth">Email</th>
+                            <th class="table__head-cell table__head-cell--fifth">Country</th>
+                            <th class="table__head-cell table__head-cell--sixth">Status</th>
+                        </tr>
+                        </thead>
+                    </table>
+                </div>
+                <table class="table__content">
+                    <tbody>
+                    <tr>
+                        <td class="table__cell table__cell--first">Jane Cooper</td>
+                        <td class="table__cell table__cell--second">Microsoft</td>
+                        <td class="table__cell table__cell--third">(225) 555-0118</td>
+                        <td class="table__cell table__cell--fourth">jane@microsoft.com</td>
+                        <td class="table__cell table__cell--fifth">United States</td>
+                        <td class="table__cell table__cell--sixth">-0.36%</td>
+                    </tr>
+                    <tr>
+                        <td class="table__cell table__cell--first">Floyd Miles</td>
+                        <td class="table__cell">Yahoo</td>
+                        <td class="table__cell">(205) 555-0100</td>
+                        <td class="table__cell">floyd@yahoo.com</td>
+                        <td class="table__cell">Kiribati</td>
+                        <td class="table__cell">-1.36%</td>
+                    </tr>
+                    <tr>
+                        <td class="table__cell table__cell--first">Ronald Richards</td>
+                        <td class="table__cell">Adobe</td>
+                        <td class="table__cell">(302) 555-0107</td>
+                        <td class="table__cell">ronald@adobe.com</td>
+                        <td class="table__cell">Israel</td>
+                        <td class="table__cell">+1.36%</td>
+                    </tr>
+                    <tr>
+                        <td class="table__cell table__cell--first">Marvin McKinney</td>
+                        <td class="table__cell">Tesla</td>
+                        <td class="table__cell">(252) 555-0126</td>
+                        <td class="table__cell">marvin@tesla.com</td>
+                        <td class="table__cell">Iran</td>
+                        <td class="table__cell">+2.36%</td>
+                    </tr>
+                    <tr>
+                        <td class="table__cell table__cell--first">Jerome Bell</td>
+                        <td class="table__cell">Google</td>
+                        <td class="table__cell">(629) 555-0129</td>
+                        <td class="table__cell">jerome@google.com</td>
+                        <td class="table__cell">Réunion</td>
+                        <td class="table__cell">-0.36%</td>
+                    </tr>
+                    <tr>
+                        <td class="table__cell table__cell--first">Kathryn Murphy</td>
+                        <td class="table__cell">Microsoft</td>
+                        <td class="table__cell">(406) 555-0120</td>
+                        <td class="table__cell">kathryn@microsoft.com</td>
+                        <td class="table__cell">Curaçao</td>
+                        <td class="table__cell">-1.36%</td>
+                    </tr>
+                    <tr>
+                        <td class="table__cell table__cell--first">Jacob Jones</td>
+                        <td class="table__cell">Yahoo</td>
+                        <td class="table__cell">(208) 555-0112</td>
+                        <td class="table__cell">jacob@yahoo.com</td>
+                        <td class="table__cell">Brazil</td>
+                        <td class="table__cell">+1.36%</td>
+                    </tr>
+                    <tr>
+                        <td class="table__cell table__cell--first">Kristin Watson</td>
+                        <td class="table__cell">Facebook</td>
+                        <td class="table__cell">(704) 555-0127</td>
+                        <td class="table__cell">kristin@facebook.com</td>
+                        <td class="table__cell">Åland Islands</td>
+                        <td class="table__cell">+1.36%</td>
+                    </tr>
+                </table>
+            </div>
+        </section>
+    </main>
 </div>
 </body>
 </html>
