--- a/src/index.html
+++ b/src/index.html
@@ -151,71 +151,118 @@
                 </div>
                 <table class="table__content">
                     <tbody>
-                    <tr>
+                    <tr class="table__row">
                         <td class="table__cell table__cell--first">Jane Cooper</td>
                         <td class="table__cell table__cell--second">Microsoft</td>
                         <td class="table__cell table__cell--third">(225) 555-0118</td>
                         <td class="table__cell table__cell--fourth">jane@microsoft.com</td>
                         <td class="table__cell table__cell--fifth">United States</td>
-                        <td class="table__cell table__cell--sixth">-0.36%</td>
+                        <td class="table__cell table__cell--sixth">
+                            <button type="button" class="table__button active">
+                                Active
+                            </button>
+                        </td>
                     </tr>
-                    <tr>
-                        <td class="table__cell table__cell--first">Floyd Miles</td>
+                    <tr class="table__row">
+                        <td class="table__cell">Floyd Miles</td>
                         <td class="table__cell">Yahoo</td>
                         <td class="table__cell">(205) 555-0100</td>
                         <td class="table__cell">floyd@yahoo.com</td>
                         <td class="table__cell">Kiribati</td>
-                        <td class="table__cell">-1.36%</td>
+                        <td class="table__cell">
+                            <button type="button" class="table__button inactive">
+                                Inactive
+                            </button>
+                        </td>
                     </tr>
-                    <tr>
-                        <td class="table__cell table__cell--first">Ronald Richards</td>
+                    <tr class="table__row">
+                        <td class="table__cell">Ronald Richards</td>
                         <td class="table__cell">Adobe</td>
                         <td class="table__cell">(302) 555-0107</td>
                         <td class="table__cell">ronald@adobe.com</td>
                         <td class="table__cell">Israel</td>
-                        <td class="table__cell">+1.36%</td>
+                        <td class="table__cell">
+                            <button type="button" class="table__button inactive">
+                                Inactive
+                            </button>
+                        </td>
                     </tr>
-                    <tr>
-                        <td class="table__cell table__cell--first">Marvin McKinney</td>
+                    <tr class="table__row">
+                        <td class="table__cell">Marvin McKinney</td>
                         <td class="table__cell">Tesla</td>
                         <td class="table__cell">(252) 555-0126</td>
                         <td class="table__cell">marvin@tesla.com</td>
                         <td class="table__cell">Iran</td>
-                        <td class="table__cell">+2.36%</td>
+                        <td class="table__cell table__cell--sixth">
+                            <button type="button" class="table__button active">
+                                Active
+                            </button>
+                        </td>
                     </tr>
-                    <tr>
-                        <td class="table__cell table__cell--first">Jerome Bell</td>
+                    <tr class="table__row">
+                        <td class="table__cell">Jerome Bell</td>
                         <td class="table__cell">Google</td>
                         <td class="table__cell">(629) 555-0129</td>
                         <td class="table__cell">jerome@google.com</td>
                         <td class="table__cell">Réunion</td>
-                        <td class="table__cell">-0.36%</td>
+                        <td class="table__cell table__cell--sixth">
+                            <button type="button" class="table__button active">
+                                Active
+                            </button>
+                        </td>
                     </tr>
-                    <tr>
-                        <td class="table__cell table__cell--first">Kathryn Murphy</td>
+                    <tr class="table__row">
+                        <td class="table__cell">Kathryn Murphy</td>
                         <td class="table__cell">Microsoft</td>
                         <td class="table__cell">(406) 555-0120</td>
                         <td class="table__cell">kathryn@microsoft.com</td>
                         <td class="table__cell">Curaçao</td>
-                        <td class="table__cell">-1.36%</td>
+                        <td class="table__cell">
+                            <button type="button" class="table__button active">
+                                Active
+                            </button>
+                        </td>
                     </tr>
-                    <tr>
-                        <td class="table__cell table__cell--first">Jacob Jones</td>
+                    <tr class="table__row">
+                        <td class="table__cell">Jacob Jones</td>
                         <td class="table__cell">Yahoo</td>
                         <td class="table__cell">(208) 555-0112</td>
                         <td class="table__cell">jacob@yahoo.com</td>
                         <td class="table__cell">Brazil</td>
-                        <td class="table__cell">+1.36%</td>
+                        <td class="table__cell table__cell--sixth">
+                            <button type="button" class="table__button active">
+                                Active
+                            </button>
+                        </td>
                     </tr>
-                    <tr>
-                        <td class="table__cell table__cell--first">Kristin Watson</td>
+                    <tr class="table__row">
+                        <td class="table__cell">Kristin Watson</td>
                         <td class="table__cell">Facebook</td>
                         <td class="table__cell">(704) 555-0127</td>
                         <td class="table__cell">kristin@facebook.com</td>
                         <td class="table__cell">Åland Islands</td>
-                        <td class="table__cell">+1.36%</td>
+                        <td class="table__cell">
+                            <button type="button" class="table__button inactive">
+                                Inactive
+                            </button>
+                        </td>
                     </tr>
                 </table>
+            </div>
+            <div class="container-table__footer footer">
+                <p class="footer__text">Showing data 1 to 8 of  256K entries</p>
+                <nav aria-label="pagination">
+                    <ul class="footer__pagination">
+                        <li class="footer__pagination-item"><span aria-hidden="true">&lt;</span><span class="visuallyhidden">previous set of pages</span></li>
+                        <li class="footer__pagination-item"><span class="visuallyhidden">page </span>1</li>
+                        <li class="footer__pagination-item"><span class="visuallyhidden">page </span>2</li>
+                        <li class="footer__pagination-item"><span class="visuallyhidden">page </span>3</li>
+                        <li class="footer__pagination-item"><span class="visuallyhidden">page </span>4</li>
+                        <li class="footer__pagination-dot"><span class="disabled">…</span></li>
+                        <li class="footer__pagination-item"><span class="visuallyhidden">page </span>40</li>
+                        <li class="footer__pagination-item"><span class="visuallyhidden">next set of pages</span><span aria-hidden="true">&gt;</span></li>
+                    </ul>
+                </nav>
             </div>
         </section>
     </main>
