--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <link rel="stylesheet" href="style/style.min.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Poppins:wght@400;500;600&display=swap"
@@ -11,6 +12,113 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
+<div class="mobile-menu">
+    <button class="mobile-menu__btn-close menu-btn-close" type="button">
+        <svg width="24" height="24">
+            <use href="../public/images/icon.svg#icon-close"></use>
+        </svg>
+    </button>
+    <header class="mobile-menu__header header">
+        <a href="#">
+            <svg class="header__icon" width="37" height="37">
+                <use href="public/images/icon.svg#icon-setting"></use>
+            </svg>
+        </a>
+        <div class="header__text">
+            <h1 class="header__title">Dashboard</h1>
+            <p class="header__version">v.01</p>
+        </div>
+    </header>
+    <nav class="mobile-menu__nav nav">
+        <ul class="nav__list">
+            <li class="nav__list-item">
+                <div class="nav__list-container">
+                    <button class="nav__button button">
+                        <svg class="nav__icon nav__icon--stroken" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-key-square"></use>
+                        </svg>
+                    </button>
+                    <p>Dashboard</p>
+                </div>
+            </li>
+            <li class="nav__list-item">
+                <div class="nav__list-container">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-d-square"></use>
+                        </svg>
+                    </button>
+                    <p class="nav__text">Product</p>
+                </div>
+                <button class="nav__button button">
+                    <svg class="nav__icon nav__icon--stroken" width="16" height="16">
+                        <use href="public/images/icon.svg#icon-chevron-right"></use>
+                    </svg>
+                </button>
+            </li>
+            <li class="nav__list-item">
+                <div class="nav__list-container">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-user-square"></use>
+                        </svg>
+                    </button>
+                    <p class="nav__text">Customers</p>
+                </div>
+                <button class="nav__button button">
+                    <svg class="nav__icon nav__icon--stroken" width="16" height="16">
+                        <use href="public/images/icon.svg#icon-chevron-right"></use>
+                    </svg>
+                </button>
+            </li>
+            <li class="nav__list-item">
+                <div class="nav__list-container">
+                    <button class="nav__button button">
+                        <svg class="nav__icon icon-wallet-money nav__icon--stroken" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-wallet-money"></use>
+                        </svg>
+                    </button>
+                    <p class="nav__text">Income</p>
+                </div>
+                <button class="nav__button button">
+                    <svg class="nav__icon nav__icon--stroken" width="16" height="16">
+                        <use href="public/images/icon.svg#icon-chevron-right"></use>
+                    </svg>
+                </button>
+            </li>
+            <li class="nav__list-item">
+                <div class="nav__list-container">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-discount-shape"></use>
+                        </svg>
+                    </button>
+                    <p class="nav__text">Promote</p>
+                </div>
+                <button class="nav__button button">
+                    <svg class="nav__icon nav__icon--stroken" width="16" height="16">
+                        <use href="public/images/icon.svg#icon-chevron-right"></use>
+                    </svg>
+                </button>
+            </li>
+            <li class="nav__list-item">
+                <div class="nav__list-container">
+                    <button class="nav__button button">
+                        <svg class="nav__icon" width="24" height="24">
+                            <use href="public/images/icon.svg#icon-message-question"></use>
+                        </svg>
+                    </button>
+                    <p class="nav__text">Help</p>
+                </div>
+                <button class="nav__button button">
+                    <svg class="nav__icon nav__icon--stroken" width="16" height="16">
+                        <use href="public/images/icon.svg#icon-chevron-right"></use>
+                    </svg>
+                </button>
+            </li>
+        </ul>
+    </nav>
+</div>
 <div class="container">
     <section class="menu">
         <header class="menu__header header">
@@ -122,7 +230,14 @@
         </section>
     </section>
     <main class="main">
-        <h2 class="main__title">Hello Evano 👋🏼,</h2>
+        <div class="main__top">
+            <button class="main__burger menu-btn-open" type="button">
+                <svg width="24" height="24">
+                    <use href="../public/images/icon.svg#icon-menu"></use>
+                </svg>
+            </button>
+            <h2 class="main__title">Hello Evano 👋🏼,</h2>
+        </div>
         <section class="main__container-table container-table">
             <div class="container-table__top">
                 <div class="container-table__text">
@@ -135,22 +250,20 @@
                 </div>
             </div>
             <div class="container-table__table table">
-                <div class="table__container-head">
-                    <table class="table__content">
-                        <thead class="table__head">
-                        <tr>
-                            <th class="table__head-cell table__head-cell--first">Customer Name</th>
-                            <th class="table__head-cell table__head-cell--second">Company</th>
-                            <th class="table__head-cell table__head-cell--third">Phone Number</th>
-                            <th class="table__head-cell table__head-cell--fourth">Email</th>
-                            <th class="table__head-cell table__head-cell--fifth">Country</th>
-                            <th class="table__head-cell table__head-cell--sixth">Status</th>
-                        </tr>
-                        </thead>
-                    </table>
-                </div>
-                <table class="table__content">
-                    <tbody>
+                <table class="table__content-head">
+                    <thead class="table__head">
+                    <tr class="table__head-row">
+                        <th class="table__head-cell table__head-cell--first">Customer Name</th>
+                        <th class="table__head-cell table__head-cell--second">Company</th>
+                        <th class="table__head-cell table__head-cell--third">Phone Number</th>
+                        <th class="table__head-cell table__head-cell--fourth">Email</th>
+                        <th class="table__head-cell table__head-cell--fifth">Country</th>
+                        <th class="table__head-cell table__head-cell--sixth">Status</th>
+                    </tr>
+                    </thead>
+                </table>
+                <table class="table__content-body">
+                    <tbody class="table__body">
                     <tr class="table__row">
                         <td class="table__cell table__cell--first">Jane Cooper</td>
                         <td class="table__cell table__cell--second">Microsoft</td>
@@ -164,35 +277,35 @@
                         </td>
                     </tr>
                     <tr class="table__row">
-                        <td class="table__cell">Floyd Miles</td>
-                        <td class="table__cell">Yahoo</td>
-                        <td class="table__cell">(205) 555-0100</td>
-                        <td class="table__cell">floyd@yahoo.com</td>
-                        <td class="table__cell">Kiribati</td>
-                        <td class="table__cell">
+                        <td class="table__cell table__cell--first">Floyd Miles</td>
+                        <td class="table__cell table__cell--second">Yahoo</td>
+                        <td class="table__cell table__cell--third">(205) 555-0100</td>
+                        <td class="table__cell table__cell--fourth">floyd@yahoo.com</td>
+                        <td class="table__cell table__cell--fifth">Kiribati</td>
+                        <td class="table__cell table__cell--sixth">
                             <button type="button" class="table__button inactive">
                                 Inactive
                             </button>
                         </td>
                     </tr>
                     <tr class="table__row">
-                        <td class="table__cell">Ronald Richards</td>
-                        <td class="table__cell">Adobe</td>
-                        <td class="table__cell">(302) 555-0107</td>
-                        <td class="table__cell">ronald@adobe.com</td>
-                        <td class="table__cell">Israel</td>
-                        <td class="table__cell">
+                        <td class="table__cell table__cell--first">Ronald Richards</td>
+                        <td class="table__cell table__cell--second">Adobe</td>
+                        <td class="table__cell table__cell--third">(302) 555-0107</td>
+                        <td class="table__cell table__cell--fourth">ronald@adobe.com</td>
+                        <td class="table__cell table__cell--fifth">Israel</td>
+                        <td class="table__cell table__cell--sixth">
                             <button type="button" class="table__button inactive">
                                 Inactive
                             </button>
                         </td>
                     </tr>
                     <tr class="table__row">
-                        <td class="table__cell">Marvin McKinney</td>
-                        <td class="table__cell">Tesla</td>
-                        <td class="table__cell">(252) 555-0126</td>
-                        <td class="table__cell">marvin@tesla.com</td>
-                        <td class="table__cell">Iran</td>
+                        <td class="table__cell table__cell--first">Marvin McKinney</td>
+                        <td class="table__cell table__cell--second">Tesla</td>
+                        <td class="table__cell table__cell--third">(252) 555-0126</td>
+                        <td class="table__cell table__cell--fourth">marvin@tesla.com</td>
+                        <td class="table__cell table__cell--fifth">Iran</td>
                         <td class="table__cell table__cell--sixth">
                             <button type="button" class="table__button active">
                                 Active
@@ -200,11 +313,11 @@
                         </td>
                     </tr>
                     <tr class="table__row">
-                        <td class="table__cell">Jerome Bell</td>
-                        <td class="table__cell">Google</td>
-                        <td class="table__cell">(629) 555-0129</td>
-                        <td class="table__cell">jerome@google.com</td>
-                        <td class="table__cell">Réunion</td>
+                        <td class="table__cell table__cell--first">Jerome Bell</td>
+                        <td class="table__cell table__cell--second">Google</td>
+                        <td class="table__cell table__cell--third">(629) 555-0129</td>
+                        <td class="table__cell table__cell--fourth">jerome@google.com</td>
+                        <td class="table__cell table__cell--fifth">Réunion</td>
                         <td class="table__cell table__cell--sixth">
                             <button type="button" class="table__button active">
                                 Active
@@ -212,23 +325,11 @@
                         </td>
                     </tr>
                     <tr class="table__row">
-                        <td class="table__cell">Kathryn Murphy</td>
-                        <td class="table__cell">Microsoft</td>
-                        <td class="table__cell">(406) 555-0120</td>
-                        <td class="table__cell">kathryn@microsoft.com</td>
-                        <td class="table__cell">Curaçao</td>
-                        <td class="table__cell">
-                            <button type="button" class="table__button active">
-                                Active
-                            </button>
-                        </td>
-                    </tr>
-                    <tr class="table__row">
-                        <td class="table__cell">Jacob Jones</td>
-                        <td class="table__cell">Yahoo</td>
-                        <td class="table__cell">(208) 555-0112</td>
-                        <td class="table__cell">jacob@yahoo.com</td>
-                        <td class="table__cell">Brazil</td>
+                        <td class="table__cell table__cell--first">Kathryn Murphy</td>
+                        <td class="table__cell table__cell--second">Microsoft</td>
+                        <td class="table__cell table__cell--third">(406) 555-0120</td>
+                        <td class="table__cell table__cell--fourth">kathryn@microsoft.com</td>
+                        <td class="table__cell table__cell--fifth">Curaçao</td>
                         <td class="table__cell table__cell--sixth">
                             <button type="button" class="table__button active">
                                 Active
@@ -236,12 +337,24 @@
                         </td>
                     </tr>
                     <tr class="table__row">
-                        <td class="table__cell">Kristin Watson</td>
-                        <td class="table__cell">Facebook</td>
-                        <td class="table__cell">(704) 555-0127</td>
-                        <td class="table__cell">kristin@facebook.com</td>
-                        <td class="table__cell">Åland Islands</td>
-                        <td class="table__cell">
+                        <td class="table__cell table__cell--first">Jacob Jones</td>
+                        <td class="table__cell table__cell--second">Yahoo</td>
+                        <td class="table__cell table__cell--third">(208) 555-0112</td>
+                        <td class="table__cell table__cell--fourth">jacob@yahoo.com</td>
+                        <td class="table__cell table__cell--fifth">Brazil</td>
+                        <td class="table__cell table__cell--sixth">
+                            <button type="button" class="table__button active">
+                                Active
+                            </button>
+                        </td>
+                    </tr>
+                    <tr class="table__row">
+                        <td class="table__cell table__cell--first">Kristin Watson</td>
+                        <td class="table__cell table__cell--second">Facebook</td>
+                        <td class="table__cell table__cell--third">(704) 555-0127</td>
+                        <td class="table__cell table__cell--fourth">kristin@facebook.com</td>
+                        <td class="table__cell table__cell--fifth">Åland Islands</td>
+                        <td class="table__cell table__cell--sixth">
                             <button type="button" class="table__button inactive">
                                 Inactive
                             </button>
@@ -250,22 +363,25 @@
                 </table>
             </div>
             <div class="container-table__footer footer">
-                <p class="footer__text">Showing data 1 to 8 of  256K entries</p>
+                <p class="footer__text">Showing data 1 to 8 of 256K entries</p>
                 <nav aria-label="pagination">
                     <ul class="footer__pagination">
-                        <li class="footer__pagination-item"><span aria-hidden="true">&lt;</span><span class="visuallyhidden">previous set of pages</span></li>
+                        <li class="footer__pagination-item"><span aria-hidden="true">&lt;</span><span
+                                class="visuallyhidden">previous set of pages</span></li>
                         <li class="footer__pagination-item"><span class="visuallyhidden">page </span>1</li>
                         <li class="footer__pagination-item"><span class="visuallyhidden">page </span>2</li>
                         <li class="footer__pagination-item"><span class="visuallyhidden">page </span>3</li>
                         <li class="footer__pagination-item"><span class="visuallyhidden">page </span>4</li>
                         <li class="footer__pagination-dot"><span class="disabled">…</span></li>
                         <li class="footer__pagination-item"><span class="visuallyhidden">page </span>40</li>
-                        <li class="footer__pagination-item"><span class="visuallyhidden">next set of pages</span><span aria-hidden="true">&gt;</span></li>
+                        <li class="footer__pagination-item"><span class="visuallyhidden">next set of pages</span><span
+                                aria-hidden="true">&gt;</span></li>
                     </ul>
                 </nav>
             </div>
         </section>
     </main>
 </div>
+<script type="module" src="./js/mobile-menu.js"></script>
 </body>
 </html>
