--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <div class="mobile-menu">
     <button class="mobile-menu__btn-close menu-btn-close" type="button">
         <svg width="24" height="24">
-            <use href="../public/images/icon.svg#icon-close"></use>
+            <use href="public/images/icon.svg#icon-close"></use>
         </svg>
     </button>
     <header class="mobile-menu__header header">
@@ -233,7 +233,7 @@
         <div class="main__top">
             <button class="main__burger menu-btn-open" type="button">
                 <svg width="24" height="24">
-                    <use href="../public/images/icon.svg#icon-menu"></use>
+                    <use href="public/images/icon.svg#icon-menu"></use>
                 </svg>
             </button>
             <h2 class="main__title">Hello Evano 👋🏼,</h2>
